<resources>
    <string name="app_name">CatalogueMovie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_now_playing">Now Playing</string>
    <string name="menu_up_coming">Up Coming</string>
    <string name="menu_popular">Popular</string>

    <string name="change_language_settings">Language Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet</string>
    <string name="collapsing_toolbar">collaps</string>
    <string name="favorite">Favorite</string>
    <string name="notfound">Not Found.</string>

    <string name="overview">Overview</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="revenue">Revenue</string>
    <string name="rating">Rating</string>
    <string name="gendre">Gendre</string>
    <string name="production_detail">Production Detail</string>
    <string name="company_name">Company Name</string>
    <string name="country">Country</string>

    <string name="myfavorite">My Favorite</string>
    <string name="cv_save">Saved</string>

</resources>
