<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/dp_16">

    <ImageView
        android:id="@+id/detailPoster"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:src="@color/cardview_dark_background" />

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/SecondTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />
        <TextView
            android:id="@+id/tvTitle"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Filem" />

        <TextView
            style="@style/SecondTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date" />
        <TextView
            android:id="@+id/releaseDate"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Release Date" />

        <TextView
            style="@style/SecondTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/revenue" />
        <TextView
            android:id="@+id/Revenue"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Revenue" />

        <TextView
            style="@style/SecondTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating" />
        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="3.8"
            android:stepSize="0.1"
            android:numStars="5"
            android:isIndicator="true"
            android:layout_marginLeft="4dp"
            android:progressTint="@color/colorPrimary"
            style="?android:attr/ratingBarStyleSmall"/>

        <TextView
            style="@style/SecondTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gendre" />
        <TextView
            android:id="@+id/gendre"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Gendre" />
    </LinearLayout>
</LinearLayout>